--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,7 @@
  *= require_tree .
  *= require_self
  */
+
+ /* SCSS components */
+ @import "components/navbar";
+ @import "components/headbar";
