--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,9 @@
-<h1>Hello from la home</h1>
+<style>
+body {
+  background-color: #F28E19;
+}
+</style>
+
+
+<button class="btn-inscription">S'inscrire</button>
+<button class="btn-inscription">Me connecter</button>
