--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
 
-  <body>
-    <p class="notice"><%= notice %></p>
+  <body class="bg-orange">
+  <!------------
+  <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+  -------->
+
+
     <%= yield %>
   </body>
 </html>
