--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,7 +1,22 @@
-<% @recipes["recipes"].each do |recipe| %>
-  <h3><%= recipe["name"] %></h3>
-  <p>difficulty: <%= recipe["difficulty"] %></p>
-  <p>time: <%= recipe["preptime"] %></p>
 
-  <img src="<%= recipe['img'] %>" alt="" width="256">
+<% @recipes["recipes"].each do |recipe| %>
+  <div class="card_design">
+    <div class="row">
+      <div class="col-3">
+        <img class="img_layout" src="<%= recipe['img'] %>" alt="" width="256">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-9">
+          <h3 class="title_layout"><%= recipe["name"] %></h3>
+
+          <p class="time_difficulty_layout">
+            <span class="time_layout">Time: <%= recipe["preptime"].to_i + recipe["cooking_time"].to_i %> min</span>
+            <span class="difficulty_layout">Difficulty: <%= recipe["difficulty"] %></span>
+        </p>
+
+          <%# <img class="icon_carott_layout" src="app/assets/images/icon-carotts.png" alt="little carott"> %>
+      </div>
+    </div>
+  </div>
 <% end %>
