--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -8,14 +8,18 @@
     </div>
     <div class="row">
       <div class="col-9">
-          <h3 class="title_layout"><%= recipe["name"] %></h3>
-
+          <div class="title_row">
+            <h3 class="title_layout"><%= recipe["name"] %></h3>
+            <%= link_to cookbook_path(recipe["id"]), class: "plus_button" do %>
+              <img src="app/assets/images/icons/button-plus.png" alt="plus button">
+            <% end %>
+        </div>
           <p class="time_difficulty_layout">
             <span class="time_layout">Time: <%= recipe["preptime"].to_i + recipe["cooking_time"].to_i %> min</span>
             <span class="difficulty_layout">Difficulty: <%= recipe["difficulty"] %></span>
         </p>
 
-          <%# <img class="icon_carott_layout" src="app/assets/images/icon-carotts.png" alt="little carott"> %>
+
       </div>
     </div>
   </div>
