--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,23 @@
 <style>
 body {
   background-color: #F28E19;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0;
 }
+
+.buttons-container {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
 </style>
 
-
-<button class="btn-inscription">S'inscrire</button>
-<button class="btn-inscription">Me connecter</button>
+<div class="row">
+<div class="col aligne-items ">
+<button class="btn-log">S'inscrire</button>
+<button class="btn-log">Me connecter</button>
+</div>
+</div>
