--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,1 +1,5 @@
-<h1>Hello !!!</h1>
+<h1>Hello !!! PAGE DU FRIGO</h1>
+
+<% @ingredients.each do |ingredient| %>
+  <p><%= ingredient.name %></p>
+<% end %>
