--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -10,9 +10,9 @@
       <div class="col-9">
           <div class="title_row">
             <h3 class="title_layout"><%= recipe["name"] %></h3>
-            <%= link_to cookbook_path(recipe["id"]), class: "plus_button" do %>
+            <%#= link_to ingredient_recipe_cookbook_path(ingredient_id: recipe["ingredient_id"], recipe_id: recipe["id"], id: recipe["cookbook_id"]), class: "plus_button" do %>
               <img src="app/assets/images/icons/button-plus.png" alt="plus button">
-            <% end %>
+            <%# end %>
         </div>
           <p class="time_difficulty_layout">
             <span class="time_layout">Time: <%= recipe["preptime"].to_i + recipe["cooking_time"].to_i %> min</span>
