--- a/app/assets/stylesheets/components/_ingredient_form.scss
+++ b/app/assets/stylesheets/components/_ingredient_form.scss
@@ -1,7 +1,7 @@
-h1 {
+.form-title {
   color: #000;
   margin-left: 30px;
-  padding-top: 30px;
+  padding-top: 150px;
   font-family: Manrope;
   font-size: 30px;
   font-style: normal;
@@ -45,7 +45,6 @@ h1 {
   border-radius: 16px;
   flex-shrink: 0;
   background-color: #FFF8F0;
-  color: #DFDFDF;
   text-align: center;
   font-family: Manrope;
   font-weight: 800;
@@ -66,7 +65,6 @@ h1 {
 
 .quantity-controls {
   display: flex;
-  align-items: center;
   margin-top: 10px;
   width: 75px;
   height: 75px;
@@ -87,6 +85,11 @@ h1 {
   word-wrap: break-word;
 }
 
+.quantity-decrement img {
+  margin-top: 12px;
+  margin-left: 8px;
+}
+
 .quantity-controls button {
   background-color: #FFF8F0;
   display: flex;
@@ -96,7 +99,7 @@ h1 {
   cursor: pointer;
 }
 
-.ingredient_quantity {
+#ingredient-quantity {
   border: none;
   display: flex;
   padding-top: 30px;
@@ -107,8 +110,6 @@ h1 {
   background-color: #FFF8F0;
   text-align: center;
   font-family: Manrope;
-  font-weight: 800;
-  word-wrap: break-word;
 }
 
 .quantity-increment {
@@ -129,4 +130,52 @@ h1 {
 .quantity-increment img {
   margin-top: 12px;
   margin-left: 8px;
+}
+
+.date-label {
+  color: #000;
+  margin: 0;
+  padding-top: 30px;
+  text-align: left;
+  font-family: Manrope;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+}
+
+.date-controls {
+  display: flex;
+}
+
+.ingredient-date {
+  border: none;
+  margin-top: 10px;
+  padding-top: 30px;
+  padding-right: 30px;
+  margin-left: 10px;
+  width: 175px;
+  height: 75px;
+  border-radius: 16px;
+  flex-shrink: 0;
+  background-color: #FFF8F0;
+  color: #DFDFDF;
+  text-align: center;
+  font-family: Manrope;
+  font-weight: 800;
+  word-wrap: break-word;
+}
+
+.submit-button {
+  border: none;
+  margin-top: 50px;
+  padding-top: 30px;
+  width: 339px;
+  height: 75px;
+  border-radius: 16px;
+  flex-shrink: 0;
+  background-color: rgba(251, 221, 186, 0.95);
+  font-family: Manrope;
+  font-weight: 800;
+  word-wrap: break-word;
 }
