--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@700&display=swap" rel="stylesheet">
   </head>
 
-  <body class="bg-orange">
+  <body >
   <!------------
   <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
