form created - need to add the link to chat gpt

--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -3,3 +3,5 @@
 <% @ingredients.each do |ingredient| %>
   <p><%= ingredient.name %></p>
 <% end %>
+
+<%= render partial: 'filter_recipes_form', locals: { ingredients: @ingredients, recipes: @recipes } %>
