formulaire finished and working

--- a/app/views/ingredients/_filter_recipes_form.html.erb
+++ b/app/views/ingredients/_filter_recipes_form.html.erb
@@ -1,28 +1,22 @@
 <div class="container">
   <h1>Selectionnez les filtres afin de générer une recette: </h1>
     <div class="filter-recipe-form">
-      <%= form_for recipes_path do |f| %>
+      <%= simple_form_for :choices, url: recipes_path, method: :get do |f| %>
         <div class="display-ingredient-checkboxes">
-          <% @ingredients.each do |ingredient| %>
-            <%= f.label ingredient.name %>
-            <%= f.check_box ingredient %>
-          <% end %>
+        <%= f.input :ingredients, collection: current_user.ingredients, as: :check_boxes %>
         </div>
 
         <div data-controller="quantity">
-          <%= f.label :quantity, "Nombre de Personnes :" %>
           <div class="quantity-input">
             <button type="button" data-action="click->quantity#decrement">-</button>
-              <%= f.number_field :quantity, data: { quantity_target: "nombre" }, :value => 1 %>
+              <%= f.input :quantity, as: :numeric, input_html: { value: 1, data: { quantity_target: "nombre" } } %>
             <button type="button" data-action="click->quantity#increment">+</button>
           </div>
         </div>
 
 
         <div>
-          <%= f.button "Entrée" %>
-          <%= f.button "Plat" %>
-          <%= f.button "Dessert" %>
+          <%= f.input :meal_type, collection: ['Entrée', 'Plat', 'Dessert'] %>
         </div>
 
         <%= f.submit "Générer les recettes" %>
