--- a/app/views/cookbooks/show.html.erb
+++ b/app/views/cookbooks/show.html.erb
@@ -1,4 +1,6 @@
 <% @recipes.each do |recipe| %>
   <%= recipe.name %>
-  <%= recipe.name %>
+  <%= recipe.difficulty %>
+  <%= recipe.cooking_time %>
+  <%= recipe.meal_type %>
 <% end %>
