--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
   <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
   -------->
-
+  <% unless current_page?(root_path) %>
+     <%= render "devise/shared/template" %>
+  <% end %>
 
     <%= yield %>
   </body>
