--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,11 @@
 <h1>Hello from la home</h1>
+
+<div class="container">
+  <div class="ingredient_card">
+    <div class="ingredient_pic"></div>
+    <button class="btn-delete"></button>
+   <p class="ingredient_name"> Pizza </p>
+   <p class="ingredient_description"> X jours de vie </p>
+   <button class="btn-plus"> <img src="app/assets/images/icons/plus.png" alt=""> </button> <p class="quantity"> 1 </p><button class="btn-minus"> - </button>
+  </div>
+</div>
