--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+
 <%# DEBUT STYLE--------------------------------------------- %>
 
 <style>
@@ -19,12 +20,12 @@ body {
 <% unless user_signed_in? %>
   <div class="fixed-bottom">
     <div class="buttons-container">
-      <%= link_to "S'inscrire",  new_user_session_path, class:"btn-log" %>
+      <%= link_to "S'inscrire",  new_user_session_path, class:"main_btn" %>
       <%# <button class="btn-log">S'inscrire</button> %>
     </div>
 
     <div class="buttons-container">
-        <%= link_to "Me connecter",  user_session_path, class:"btn-log" %>
+        <%= link_to "Me connecter",  user_session_path, class:"main_btn" %>
     </div>
   </div>
 <% end %>
