--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -10,7 +10,7 @@
       <button type="button" class="quantity-decrement">
         <img src="https://s3-alpha-sig.figma.com/img/af4a/b86d/d0ca102fd68177fa88ff7d6b2811596f?Expires=1702252800&Signature=lGAH5nDbRw6KzMaPRz3bmbA9ybvtQjJYO39HXykEuu22npXdnEdyGT1UZ0QAVEmlejRSgrrlSUzEnmdK~gtaBqs4rB12uPXzSU7GMpMQfwxQZj6De0ZpNNHSkNh2n8~QiIUG8zY46fzb8VyYE5FoWCbJNpaefbywsM0eTg79bAN0~VKRyvJHa0Z~ZwZ6S4sGz12TGt9WA4INYdSuAYMGTBUDqK8JxkzP-yscOPv5fTr0qjFvjpg4X3D9ySXFAE-Re4cbQECi4xmulSxNURK2wD7ojrSxwPJO-CmVMlVfnzh9IllQVDfRmkXx7SDtd-sgLSRzrIgvN9GbZf0TSmDaAg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="Incrementer" style="width: 40px; height: 40px; flex-shrink: 0;">
       </button>
-      <%= f.number_field :quantity, id: "ingredient-quantity" %>
+      <%= f.number_field :quantity, class: "ingredient-quantity" %>
       <button type="button" class="quantity-increment">
         <img src="https://s3-alpha-sig.figma.com/img/af4a/b86d/d0ca102fd68177fa88ff7d6b2811596f?Expires=1702252800&Signature=lGAH5nDbRw6KzMaPRz3bmbA9ybvtQjJYO39HXykEuu22npXdnEdyGT1UZ0QAVEmlejRSgrrlSUzEnmdK~gtaBqs4rB12uPXzSU7GMpMQfwxQZj6De0ZpNNHSkNh2n8~QiIUG8zY46fzb8VyYE5FoWCbJNpaefbywsM0eTg79bAN0~VKRyvJHa0Z~ZwZ6S4sGz12TGt9WA4INYdSuAYMGTBUDqK8JxkzP-yscOPv5fTr0qjFvjpg4X3D9ySXFAE-Re4cbQECi4xmulSxNURK2wD7ojrSxwPJO-CmVMlVfnzh9IllQVDfRmkXx7SDtd-sgLSRzrIgvN9GbZf0TSmDaAg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="Incrementer" style="width: 40px; height: 40px; flex-shrink: 0;">
       </button>
