--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,4 +1,9 @@
+<div class="content-header">
+</div>
 
+
+
+<%= render "app/assets/stylesheets/components/_template.scss" %>
 <% @recipes["recipes"].each do |recipe| %>
   <div class="card_design">
     <div class="row">
@@ -27,3 +32,6 @@
     </div>
   </div>
 <% end %>
+
+<div class="content-footer">
+</div>
