--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,4 +16,5 @@
 @import "components/ingredient_card";
 
 @import "components/ingredient_form";
-@import "components/template";
+@import "components/footer";
+
