--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -4,6 +4,8 @@
 // Define fonts for body and headers
 $body-font: "Work Sans", "Helvetica", "sans-serif";
 $headers-font: "Nunito", "Helvetica", "sans-serif";
+$title-font: "Darumadrop One", "sans-serif";
+
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
