--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -16,7 +16,7 @@ body {
 #titre-hp {
   color: white;
   text-align: center;
-  font-size: 70px;
+  font-size: 60px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -24,6 +24,7 @@ body {
   line-height: 1;
   padding-top: 20px;
   padding-bottom: 20px;
+  font-family: 'Darumadrop One', sans-serif;
 
 }
 
@@ -33,5 +34,45 @@ body {
 
 .buttons-container {
   text-align: center;
-  margin-bottom: 20px;
+  margin-top: 0;
+}
+
+.image-logo {
+  width: 150px;
+}
+
+.btnlog {
+  text-decoration: none;
+  background-color: white;
+  color: #F28E19;
+  padding: 20px;
+  border-top-right-radius: 40px;
+  border-top-left-radius: 90px;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 90px;
+  width: 90px;
+  width: 150px; /* Ajustez la largeur souhaitée */
+  display: inline-block; /* Pour permettre le réglage de la largeur */
+  text-align: center; /* Pour centrer le texte horizontalement */
+  box-sizing: border-box; /* Inclure le padding dans la largeur totale */
+  margin: 0 5px;
+}
+
+.btn-log-out {
+  text-decoration: none;
+  color: white;
+  font-size: 15px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  padding-bottom: 20px;
+}
+
+.btnmilieu {
+  margin-bottom: 10px;
+}
+
+.fixed-bottom {
+  margin-bottom: 30px;
 }
