--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,17 +11,17 @@
     <%= javascript_importmap_tags %>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@700&display=swap" rel="stylesheet">
+
   </head>
 
-  <body >
-  <!------------
-  <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-  -------->
-  <% unless current_page?(root_path) %>
-     <%= render "devise/shared/template" %>
-  <% end %>
+  <body>
+
 
     <%= yield %>
+
+  <% unless current_page?(root_path new_user_session_path) %>
+    <%= render "shared/footer" %>
+  <% end %>
+
   </body>
 </html>
