--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,6 @@
 body {
   background-color: #F28E19;
 }
-
 </style>
 <%# FIN STYLE--------------------------------------------- %>
 
@@ -13,22 +12,27 @@ body {
 </div>
 
 <div class="logo">
-<%= cl_image_tag("cvkfyt9dwokovu1karo2") %>
+<%= link_to ingredients_path do %>
+  <%= image_tag("logo.png", class: "image-logo") %>
+<% end %>
 </div>
 
 <% unless user_signed_in? %>
   <div class="fixed-bottom">
+  <div class="btnmilieu">
     <div class="buttons-container">
-      <%= link_to "S'inscrire",  new_user_session_path, class:"btn-log" %>
+      <%= link_to "S'inscrire",  new_user_session_path, class:"btnlog" %>
       <%# <button class="btn-log">S'inscrire</button> %>
     </div>
+  </div>
 
     <div class="buttons-container">
-        <%= link_to "Me connecter",  user_session_path, class:"btn-log" %>
+        <%= link_to "Me connecter",  user_session_path, class:"btnlog" %>
     </div>
   </div>
 <% end %>
 
+
 <% if user_signed_in? %>
-  <%= link_to 'Se déconnecter', destroy_user_session_path, data: {turbo_method: :delete}, class: 'nav-link' %>
+  <%= link_to 'Se déconnecter', destroy_user_session_path, data: {turbo_method: :delete}, class: "btn-log-out" %>
 <% end %>
