--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -9,3 +9,17 @@
   font-weight: 800;
   align-items: start;
 }
+
+.main_btn {
+  height: 120px;
+  width: 340px;
+  border-radius: 30px;
+  background-color: #F28E1966;
+  border: none;
+  color: #000;
+  font-family: Manrope;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 800;
+  align-items: center;
+}
