--- a/app/views/devise/shared/_template.html.erb
+++ b/app/views/devise/shared/_template.html.erb
@@ -1,11 +1,9 @@
-<div class="header">
-</div>
 
 <div class="content">
 </div>
 
 <div class="footer">
-  <div class="icons-footer">
+  <div class="icons-footer mt-2 mx-4">
     <%#= cl_image_tag("cvkfyt9dwokovu1karo2") %>
     <%= image_tag "refrigerateur.png", alt: "Le Wagon", width: 40 %>
     <%= image_tag "open-book.png", alt: "Le Wagon", width: 40 %>
