--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,10 +6,10 @@
       <p>Mon frigo</p>
     <% end %>
 
-    <%= link_to cookbook_path(current_user) do %>
+    <%#= link_to cookbook_path(current_user) do %>
       <%= image_tag "open-book.png", alt: "Le Wagon", width: 40 %>
       <p>Mon frigo</p>
-     <% end %>
+     <%# end %>
 
     <%= link_to ingredients_path do %>
       <%= image_tag "rabbit.png", alt: "Le Wagon", width: 40 %>
