--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,13 +22,13 @@ body {
   <div class="fixed-bottom">
   <div class="btnmilieu">
     <div class="buttons-container">
-      <%= link_to "S'inscrire",  new_user_session_path, class:"main_btn" %>
+      <%= link_to "S'inscrire",  new_user_session_path, class:"btnlog" %>
       <%# <button class="btn-log">S'inscrire</button> %>
     </div>
   </div>
 
     <div class="buttons-container">
-        <%= link_to "Me connecter",  user_session_path, class:"main_btn" %>
+        <%= link_to "Me connecter",  user_session_path, class:"btnlog" %>
     </div>
   </div>
 <% end %>
