--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -18,11 +18,28 @@
   margin-left: 55px;
   margin-right: 55px;
   padding-top: 7px;
-
-
 }
 
 .icons-footer img {
-  width: 30px; /* Ou la largeur souhaitée */
+  width: 20px; /* Ou la largeur souhaitée */
   height: auto; /* Pour maintenir le rapport hauteur/largeur */
+}
+
+.text-footer {
+  color: white;
+  text-decoration: none;
+  font-size: 15px;
+}
+
+.icontext {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.image-footer {
+  align-items: center;
+  justify-content: center;
 }
