--- a/app/assets/stylesheets/components/_recipe_card.scss
+++ b/app/assets/stylesheets/components/_recipe_card.scss
@@ -31,13 +31,13 @@
   border: none;
   font-family: Manrope;
   background-color: white;
-  margin-top: -5px;
+  // margin-top: -5px;
 }
 
 .title_layout {
   font-family: Manrope;
   font-size: 22px;
-  margin-bottom: 4px;
+
 }
 
 .time_difficulty_layout {
@@ -48,10 +48,10 @@
 
 .time_layout,
 .difficulty_layout {
-  font-size: 16px;
+  // font-size: 16px;
   font-family: Manrope;
   padding: 0px;
-  margin-bottom: 3%;
+  // margin-bottom: 3%;
   color: #555; /* Changed color for better readability */
 }
 
