--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,13 +1,14 @@
 // Import page-specific CSS files here.
 @import "home";
 
-.title h1 {
+.title-frigo {
   color: #000;
   font-family: Manrope;
   font-size: 25px;
   font-style: normal;
   font-weight: 800;
   align-items: start;
+  padding-left: 5px;
 }
 
 .main_btn {
@@ -22,4 +23,38 @@
   font-style: normal;
   font-weight: 800;
   align-items: center;
+}
+
+.titre-frigo{
+  display: flex;
+  margin-left: 26px;
+}
+
+.petite-carrote{
+  width: 28px;
+  height: 30px;
+}
+
+.image-plat {
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.plat-image {
+  width: 100%; /* Pour occuper la largeur totale du conteneur */
+  height: auto; /* Pour maintenir le rapport hauteur/largeur et éviter la distorsion */
+  display: block;
+}
+
+#number-quantity {
+  padding-bottom: 0;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-bottom: 5px;
 }
