--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 
     <%= yield %>
 
-  <% unless current_page?(root_path new_user_session_path) %>
+  <% unless current_page?(root_path) %>
     <%= render "shared/footer" %>
   <% end %>
 
