--- a/app/assets/stylesheets/components/_recipe_card.scss
+++ b/app/assets/stylesheets/components/_recipe_card.scss
@@ -1,66 +1,66 @@
-.card_design {
-  display: flex;
-  width: 339px;
-  height: 104px;
-  flex-shrink: 0;
-  border-radius: 8px;
-  border-radius: 8px;
-  margin-bottom: 20px;
-  background-color: #FBDDBA;
-}
+// .card_design {
+//   display: flex;
+//   width: 339px;
+//   height: 104px;
+//   flex-shrink: 0;
+//   border-radius: 8px;
+//   border-radius: 8px;
+//   margin-bottom: 20px;
+//   background-color: #FBDDBA;
+// }
 
-.img_layout {
-  width: 86px;
-  height: 86px;
-  flex-shrink: 0;
-  border-radius: 8px;
-  margin: 10px;
-}
+// .img_layout {
+//   width: 86px;
+//   height: 86px;
+//   flex-shrink: 0;
+//   border-radius: 8px;
+//   margin: 10px;
+// }
 
-.title_row {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+// .title_row {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+// }
 
-.plus_button {
-  width: 25px;
-  height: 25px;
-  border-radius: 25px;
-  padding: 0%;
-  border: none;
-  font-family: Manrope;
-  background-color: white;
-  // margin-top: -5px;
-}
+// .plus_button {
+//   width: 25px;
+//   height: 25px;
+//   border-radius: 25px;
+//   padding: 0%;
+//   border: none;
+//   font-family: Manrope;
+//   background-color: white;
+//   // margin-top: -5px;
+// }
 
-.title_layout {
-  font-family: Manrope;
-  font-size: 22px;
+// .title_layout {
+//   font-family: Manrope;
+//   font-size: 22px;
 
-}
+// }
 
-.time_difficulty_layout {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+// .time_difficulty_layout {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+// }
 
-.time_layout,
-.difficulty_layout {
-  // font-size: 16px;
-  font-family: Manrope;
-  padding: 0px;
-  // margin-bottom: 3%;
-  color: #555; /* Changed color for better readability */
-}
+// .time_layout,
+// .difficulty_layout {
+//   // font-size: 16px;
+//   font-family: Manrope;
+//   padding: 0px;
+//   // margin-bottom: 3%;
+//   color: #555; /* Changed color for better readability */
+// }
 
-h1 {
-  color: #000;
-  font-family: Manrope;
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 800;
-  line-height: normal;
-  padding-left: 24px;
-}
+// h1 {
+//   color: #000;
+//   font-family: Manrope;
+//   font-size: 28px;
+//   font-style: normal;
+//   font-weight: 800;
+//   line-height: normal;
+//   padding-left: 24px;
+// }
