--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,10 +9,10 @@
     </div>
 
     <div class="icontext">
-      <%#= link_to cookbook_path(current_user), class:"text-footer" do %>
+      <%= link_to cookbook_path(current_user), class:"text-footer" do %>
         <%= image_tag "open-book.png", alt: "Le Wagon", width: 40 %>
         <p>Cookbook</p>
-      <%# end %>
+      <% end %>
     </div>
 
     <div class="icontext">
