--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -9,52 +9,88 @@
   font-weight: 800;
   align-items: start;
   padding-left: 5px;
-}
-
-.main_btn {
-  height: 120px;
-  width: 340px;
-  border-radius: 30px;
-  background-color: #F28E1966;
-  border: none;
-  color: #000;
-  font-family: Manrope;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 800;
-  align-items: center;
-}
-
-.titre-frigo{
   display: flex;
-  margin-left: 26px;
+
 }
+
+.titre-carrotte-frigo {
+  display: flex;
+  margin-left: 27px;
+}
+
+// .main_btn {
+//   height: 120px;
+//   width: 340px;
+//   border-radius: 30px;
+//   background-color: #F28E1966;
+//   border: none;
+//   color: #000;
+//   font-family: Manrope;
+//   font-size: 20px;
+//   font-style: normal;
+//   font-weight: 800;
+//   align-items: center;
+// }
+
 
 .petite-carrote{
   width: 28px;
   height: 30px;
 }
 
-.image-plat {
-  width: 100px;
-  height: 100px;
-  overflow: hidden;
+.button-create-recipe{
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 15px;
-  margin-right: 15px;
 }
 
-.plat-image {
-  width: 100%; /* Pour occuper la largeur totale du conteneur */
-  height: auto; /* Pour maintenir le rapport hauteur/largeur et éviter la distorsion */
-  display: block;
+.main_btn {
+  text-decoration: none;
+  background-color: #F28E19;
+  color: #ffffff;
+  padding: 10px;
+  border-top-right-radius: 40px;
+  border-top-left-radius: 90px;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 90px;
+  width: 280px; /* Ajustez la largeur souhaitée */
+  display: inline-block; /* Pour permettre le réglage de la largeur */
+  text-align: center; /* Pour centrer le texte horizontalement */
+  box-sizing: border-box; /* Inclure le padding dans la largeur totale */
+  margin: 0 5px;
+  height: 75px;
+  border: none;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-#number-quantity {
-  padding-bottom: 0;
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-bottom: 5px;
+.button-create-recipe2 {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+// .image-plat {
+//   width: 100px;
+//   height: 100px;
+//   overflow: hidden;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   margin-left: 15px;
+//   margin-right: 15px;
+// }
+
+// .plat-image {
+//   width: 100%; /* Pour occuper la largeur totale du conteneur */
+//   height: auto; /* Pour maintenir le rapport hauteur/largeur et éviter la distorsion */
+//   display: block;
+// }
+
+// #number-quantity {
+//   padding-bottom: 0;
+//   margin-left: 5px;
+//   margin-right: 5px;
+//   margin-bottom: 5px;
+// }
