--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,37 +1,36 @@
-<div class="content-header">
-</div>
 
+<div class="main-container mt-4">
+  <div class = "titre-carrotte-frigo"> <%= image_tag("logo.png", class:"petite-carrote") %>
+    <h1 class="title-frigo">IDEES DE RECETTES</h1>
+  </div>
 
+  <div class="instruction ms-4">
+    <p> Quelque chose de très bon se prepare... </p>
+  </div>
 
-<%= render "app/assets/stylesheets/components/_template.scss" %>
-<% @recipes["recipes"].each do |recipe| %>
-  <div class="card_design">
+  <div class="container">
     <div class="row">
-      <div class="col-3">
-        <img class="img_layout" src="<%= recipe['img'] %>" alt="" width="256">
+      <% @recipes["recipes"].each do |recipe| %>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card_design">
+        
+          <div class="image-plat">
+            <img class="img_layout" src="<%= recipe['img'] %>" alt="" width="256">
+          </div>
 
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-9">
-          <div class="title_row">
-            <h3 class="title_layout"><%= recipe["name"] %></h3>
-            <%#= link_to , class: "plus_button" do %>
-              <img src="app/assets/images/icons/button-plus.png" alt="plus button">
-
-            <%# end %>
-        </div>
-          <p class="time_difficulty_layout">
-            <span class="time_layout">Time: <%= recipe["preptime"].to_i + recipe["cooking_time"].to_i %> min</span>
-            <span class="difficulty_layout">Difficulty: <%= recipe["difficulty"] %></span>
+          <div class="content row ingredient-infos">
+            <h2 class="title_layout" id="number-quantity2"><%= recipe["name"] %></h2>
+            <h3 class="time_layout">Temps de preparation : <%= recipe["preptime"].to_i + recipe["cooking_time"].to_i %> minutes</h3>
+            <h3 class="time_layout">Dificulté : <%= recipe["difficulty"] %></h3>
             <%= link_to "enregistrer", recipes_path(@recipe, recipe), data: {turbo_method: :post} %>
-        </p>
+          </div>
 
-
+        </div>
       </div>
+      <% end %>
     </div>
   </div>
-<% end %>
 
-<div class="content-footer">
+
+
 </div>
