--- a/app/views/cookbooks/show.html.erb
+++ b/app/views/cookbooks/show.html.erb
@@ -22,7 +22,7 @@
           <div class="content row ingredient-infos">
             <h2><%= recipe.name %></h2>
 
-        
+
             <% case recipe.difficulty %>
             <% when 1 %>
             <div class="div">
@@ -64,7 +64,7 @@
             <% end %>
 
 
-            <h3><i class="fa-solid fa-clock"></i><%= recipe.preptime.hour  %></h3>
+            <h3><i class="fa-solid fa-clock"></i><%= recipe.preptime  %></h3>
           </div>
 
         </div>
