pop up working v1

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 
 @import "components/ingredient_form";
 @import "components/footer";
+@import "components/little_btn";
 
 @import "components/template";
 
