--- a/app/assets/stylesheets/components/_little_btn.scss
+++ b/app/assets/stylesheets/components/_little_btn.scss
@@ -1,13 +1,12 @@
-.main-btn {
-  height: 100px;
-  width: 340px;
+.little-btn {
+  height: 25px;
+  width: 100px;
   border-radius: 30px;
-  background-color: #F28E19;
+  background-color: #FBDDBA;
   border: none;
   color: white;
   font-family: Manrope;
-  font-size: 20px;
+  font-size: 15px;
   font-style: normal;
-  font-weight: 800;
   align-items: center;
 }
