--- a/app/views/ingredients/_filter_recipes_form.html.erb
+++ b/app/views/ingredients/_filter_recipes_form.html.erb
@@ -1,26 +1,35 @@
 
-<div class="container">
-  <h1>Selectionnez les filtres afin de générer une recette: </h1>
+<div class="container filter-content">
+  <p><strong>Qu'est-ce qu'on cuisine aujourd'hui ? </strong></p>
     <div class="filter-recipe-form">
       <%= simple_form_for :choices, url: recipes_path, method: :get do |f| %>
-        <div class="display-ingredient-checkboxes">
-        <%= f.input :ingredients, collection: current_user.ingredients, as: :check_boxes %>
-        </div>
 
-        <div data-controller="quantity">
-          <div class="quantity-input">
-            <button type="button" data-action="click->quantity#decrement">-</button>
-              <%= f.input :quantity, as: :numeric, input_html: { value: 1, data: { quantity_target: "nombre" } } %>
-            <button type="button" data-action="click->quantity#increment">+</button>
+      <div data-controller="quantity">
+          <div class="quantity-input row align-items">
+              <%= f.input :Pour_qui_?, as: :numeric, class: "col" , input_html: { value: 1, data: { quantity_target: "nombre" } } %>
+            <div class="qty_button">
+              <button class="title_button col-1" type="button" data-action="click->quantity#decrement">-</button>
+              <button class="title_button col-1" type="button" data-action="click->quantity#increment">+</button>
+            </div>
           </div>
-        </div>
-
 
         <div>
-          <%= f.input :meal_type, collection: ['Entrée', 'Plat', 'Dessert'] %>
+          <%= f.input :Quel_type_de_plat_?, collection: ['Entrée', 'Plat', 'Dessert'] %>
         </div>
 
-        <%= f.submit "Générer les recettes" %>
+        <div class="display-ingredient-checkboxes">
+        <%= f.input :ingrédients, collection: current_user.ingredients, as: :check_boxes %>
+        </div>
+
+
+        </div>
+
+
+
+
+
+
+        <%= f.submit "Trouve moi des recettes !", class: "main_btn" %>
       <% end %>
     </div>
 </div>
