--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -31,7 +31,7 @@
 
           <div class="d-flex align-items-center justify-content-start ">
             <button class="plus_button"> - </button>
-              <p id="number-quantity"><%= ingredient.quantity %></p>
+              <p class="mb-0" id="number-quantity"><%= ingredient.quantity %></p>
             <button class="plus_button"> + </button>
           </div>
 
@@ -44,18 +44,40 @@
   </div>
 </div>
 
-<div class="button-create-recipe">
-  <button class="main_btn"> Générer une recette </button>
+<!-- Button trigger modal -->
+<button type="button" class="main-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Générer une recette
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content bg-warning-subtle">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel"> <strong> Mes filtres</strong></h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+
+        <%= render partial: 'filter_recipes_form', locals: { ingredients: @ingredients, recipes: @recipes } %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="little-btn" data-bs-dismiss="modal">Fermer</button>
+      </div>
+    </div>
+  </div>
 </div>
 
+
+
 <div class="button-create-recipe">
-  <%# <button class="main_btn"> Rajouter un produit </button> %>
   <%= link_to "Rajouter un produit", new_ingredient_path %>
 </div>
 
 </div>
 </div>
-<%= render partial: 'filter_recipes_form', locals: { ingredients: @ingredients, recipes: @recipes } %>
+
+
 <!----------
 <% @ingredients.each do |ingredient| %>
   <div class="container">
